# earning_trade

./: .pre-commit-config.yaml  LICENSE  README.md  _config.py  _logging.py  _utils.py  pyproject.toml
app/: aggregate_results.py  run_strategy.py
backtest/: backtest.py
notebooks/: earning_analysis.ipynb
src/earning_trade/: _config.py  _logger.py  _utils.py  mock_catalog.py
src/earning_trade/app/: aggregate_results.py  run_strategy.py
src/earning_trade/backtest/: backtest.py
src/earning_trade/strategy_data/: base_strategy.py  long_strategy.py  short_strategy.py
strategy_data/: base_strategy.py  long_strategy.py  short_strategy.py
