[project]
name = "earning-trade"
version = "0.1.0"
description = "US Equities Long/Short Earnings Trading Strategy"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Laurent Lanteigne", email = "your.email@example.com" }]
dependencies = [
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "polars>=1.14.0",
    "scipy>=1.11.0",
    "matplotlib>=3.8.0",
    "plotly>=5.18.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/earning_trade"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.9.0",
    "pre-commit>=4.0.0",
    "mypy>=1.8.0",
    "pandas-stubs>=2.2.0",
    "types-requests>=2.31.0",
]


[tool.ruff]
line-length = 100
target-version = "py310"
exclude = ["*.ipynb", "notebooks/*"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

# [tool.mypy]
# strict = true
# ignore_missing_imports = true
# python_version = "3.10"
